# toy-compiler

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  mlir_unit_test.cpp
benchmarks/: CMakeLists.txt  add_tensors_8192.toy  benchmark-add-tensors.cpp  benchmark-mat-mul.cpp
docs/: benchmarks.md  checklist.md  examples.md  python-binding.md
examples/: CMakeLists.txt  add-tensor.c  add-tensors.cpp  add-values.cpp  example.toy  print-tensor.cpp
include/: AST.h  Lexer.h  MLIRGen.h  Parser.h
include/Conversion/: CMakeLists.txt  Passes.h  Passes.td
include/Device1/: Init.h
include/Device2/: Init.h
include/Init/: Registry.h
include/Toy/: CMakeLists.txt  Combine.h  Dialect.h  Strategies.h  ToyCombine.td  ToyDialect.td  ToyInterface.td  ToyOps.td
include/ToyCAPI/: Dialects.h
include/ToyFrontend/: AST.h  Container.h  Lexer.h  MLIRGen.h  Parser.h
include/Utils/: Utility.h
python/: CMakeLists.txt  PythonToyOps.td  ToyExtension.cpp  ToyExtensionPybind11.cpp  toy.py
python/dialects/: ToyOps.td  toy_pybind11.py
src/: AST.cpp  CMakeLists.txt  MLIRGen.cpp  ToyCompiler.cpp
src/Conversion/: CMakeLists.txt  MidToLLVMPass.cpp  Passes.cpp  ToySubToMidPass.cpp  ToyToMidPass.cpp
src/Device1/: CMakeLists.txt  Init.cpp
src/Device2/: CMakeLists.txt  Init.cpp
src/Init/: CMakeLists.txt  Registry.cpp
src/Toy/: CMakeLists.txt  Combine.cpp  Dialect.cpp  Ops.cpp  Strategies.cpp
src/ToyCAPI/: CMakeLists.txt  Dialects.cpp
src/ToyFrontend/: AST.cpp  CMakeLists.txt  MLIRGen.cpp
src/Utils/: CMakeLists.txt  Utility.cpp
test_lit/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in  toy-opt.cpp  toy-translate.cpp
test_lit/Conversion/: mid_to_llvm.mlir  toy_sub_to_mid.mlir  toy_to_mid.mlir  toy_to_mid_vec.mlir
test_lit/Toy/: canonicalize.mlir  combine.mlir  const_fold.mlir  const_fold_device2.mlir  mlir_toy.mlir
test_lit/ToyFrontend/: add.toy  add_mlir.toy  add_mlir_mid.toy  add_mlir_mid_vec.toy  addf32_mlir.toy  ast.toy  empty.toy  matmul.toy  matmul_mlir_mid.toy  matmul_mlir_mid_vec.toy  mul.toy  mul_mlir.toy  mul_mlir_mid.toy  mul_mlir_mid_vec.toy  print_jit.toy  scalar.toy  scalar_mlir.toy  store_mlir.toy  store_mlir_mid.toy  sub_mlir.toy  sub_mlir_mid.toy
test_lit/python/: smoketest.py
test_unit/: CMakeLists.txt  mlir-unit-test.cpp
